# garras

./: Jenkinsfile  meson.build
data/: garras.appdata.xml  garras.desktop
src/: Application.vala
